2005-01-18  Nathaniel Smith  <njs@codesourcery.com>

	* mac.hh: 
	* cert.cc (vcheck_cert_name):
	(calculate_vcheck_mac): 
	(cert_manifest_vcheck
	(check_manifest_vcheck):
	* cert.hh (cert_manifest_vcheck):
	(check_manifest_vcheck):
	* constants.cc (constants::vchecklen):
	* constants.hh (constants::vchecklen):
	* commands.cc (vcheck):
	Remove.

	* tests/t_vcheck.at: New test.
	* testsuite.at: Call it.

2005-01-18  Nathaniel Smith  <njs@codesourcery.com>

	* ROADMAP: Remove 'upgrade to sqlite3' todo item.

2005-01-18  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc (tag):
	(testresult):
	(approve):
	(disapprove):
	(comment):
	(fload):
	(fmerge):
	(cat):
	(rcs_import): Change grouping for "--help" display, to make more
	informative.
	(rcs_import): Also add more details to help text.

2005-01-17  Nathaniel Smith  <njs@codesourcery.com>

	* diff_patch.cc (normalize_extents): Add missing ')'.
	
2005-01-17  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_update_1.at: New test.
	* testsuite.at: Call it.

2005-01-11  Nathaniel Smith  <njs@codesourcery.com>

	* diff_patch.cc (normalize_extents): Add warning for anyone who
	manages to trigger the untested part of the normalization code.

2005-01-14  Christian Kollee <stuka@pestilenz.org>

	* search for and link with sqlite3 when --bundle-sqlite=no

2005-01-12  Derek Scherger  <derek@echologic.com>

	* tests/t_ambig_update.at: add comments from discussion on irc
	* tests/t_status_missing.at: new test
	* testsuite.at: include it

2005-01-10  graydon hoare  <graydon@pboox.com>

	* commands.cc (explicit_merge): Tweak merge message.
	* database.cc (check_sqlite_format_version): New function.
	(database::sql): Call it.
	* sqlite/pager.hh (SQLITE_DEFAULT_PAGE_SIZE): Adjust to 8192.
	(SQLITE_MAX_PAGE_SIZE): Adjust to 65536.
	* schema_migration.cc: Post-merge cleanup.
	* Makefile.am: Likewise.

2005-01-10  Christof Petig <christof@petig-baender.de>

	* sqlite/*: SQLite 3.0.8 CVS import
	* database.{cc,hh}: